# prop-ai-agent

./: README.md  proposal.md  pyproject.toml  requirements.txt
proposals/: proposal_25_04_2025_09_58_40.docx
src/prop_ai_agent/: main.py
src/prop_ai_agent/crews/prop_crew/: prop_crew.py
src/prop_ai_agent/crews/prop_crew/config/: agents.yaml  tasks.yaml
